<resources>
    <string name="app_name">Messages</string>

    <string name="upperDot">"\U+0358"</string>

    <string name="receiver">"13033"</string>
    <string name="changeDetails">Edit Details</string>
    <string name="changeAddress">Edit Address</string>
    <string name="changeMessage">Edit Code</string>
    <string name="changeName">Edit Name</string>
    <string name="your_addresses">Your Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="enter_area">Enter Area</string>
    <string name="enter_address">Enter Address</string>
    <string name="cancel">Cancel</string>
    <string name="set_address">Set Address</string>
    <string name="remove_address">Remove Address?</string>
    <string name="remove">Remove</string>
    <string name="set_name">Set Name</string>
    <string name="fullname">Full Name</string>
    <string name="code_5">5 - Τελετή Κηδείας</string>
    <string name="code_6">6 - Σωματική Άσκηση</string>
    <string name="code_4">4 - Παροχή Βοήθειας</string>
    <string name="code_3">3 - Τράπεζα</string>
    <string name="code_2">2 - Κατάστημα Προμηθειών</string>
    <string name="code_1">1 - Φαρμακείο - Νοσοκομείο</string>
    <string name="successCodeMessage">Successfully changed message code to %d.</string>
    <string name="add">"Add "</string>
    <string name="images">Images</string>

    <string name="default_name">ΚΥΡΙΟΣ ΜΟΥΣΤΑΡΔΑΣ</string>
    <string name="default_address">ΡΙΠΕΡΙΝΟ 55</string>
    <string name="default_area">ΠΕΠΕΡΟΝΙ</string>

</resources>