<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/changeAddress"
        android:title="@string/changeAddress"
        app:showAsAction="never" />

    <item
        android:id="@+id/changeMessageCode"
        android:title="@string/changeMessage"
        app:showAsAction="never" />

    <item
        android:id="@+id/changeName"
        android:title="@string/changeName"
        app:showAsAction="never" />

    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_call"
        app:showAsAction="ifRoom"
        android:title="Call" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:showAsAction="ifRoom" />
</menu>