<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".name.ChangeNameFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <RadioGroup
        android:id="@+id/radioGroupCodes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop">

        <RadioButton
            android:id="@+id/code1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <RadioButton
            android:id="@+id/code2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_2"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/code1" />

        <RadioButton
            android:id="@+id/code3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_3"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/code2" />

        <RadioButton
            android:id="@+id/code4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_4"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/code3" />

        <RadioButton
            android:id="@+id/code5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_5"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/code4" />

        <RadioButton
            android:id="@+id/code6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorSenderFont"
            android:text="@string/code_6"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/code5" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>